--- a/navbar.html
+++ b/navbar.html
@@ -25,6 +25,7 @@
                     <div class="dropdown-menu">
                         <a href="impr.html">IMP Renewed</a>
                         <a href="oer.html">Otyacraft Engine Renewed</a>
+                        <a href="https://issue-migrator.vercel.app/" target="_blank">Issue Migrator</a>
                     </div>
                 </div>
                 <a href="testing.html">Test Uploads</a>
