--- a/testing.html
+++ b/testing.html
@@ -48,7 +48,7 @@
         <script>
             let downloadsConfig = {};
 
-            fetch("https://codeberg.org/Mod-Sauce/pages/raw/branch/main/downloads.json")
+            fetch("downloads.json")
                 .then((res) => res.json())
                 .then((data) => {
                     downloadsConfig = data;
